# sonarr_radarr_auto_blocklist

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: api.rs  json.rs  main.rs
src/json/: radarr.rs  sonarr.rs
